2007-03-17  Kevin Kenny  <kennykb@acm.org>
	
	* win/tclWinReg.c (GetKeyNames): Size the buffer for enumerating
	key names correctly, so that Unicode names exceeding 127 chars
	can be retrieved without crashing. [Bug 1682211]
	* tests/registry.test (registry-4.9): Added test case for the
	above bug.

2007-03-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (INST_FOREACH_STEP4):	Re-fetch pointers for
	* tests/foreach.test (foreach-10.1):	the value list each iteration
	of the loop as defense against shimmers.  [Bug 1671087]

	* generic/tclVar.c (TclArraySet):	Re-fetch pointers for the list
	* tests/var.test (var-17.1):	argument of [array set] each time
	through the loop as defense against possible shimmer issues.
	[Bug 1669489].

2007-03-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCmdIL.c (Tcl_LsortObjCmd): Handle tricky case with loss
	* tests/cmdIL.test (cmdIL-1.29):of list rep during sorting due
	to shimmering. [Bug 1675116]

2007-03-07  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: add spinlock debugging and sanity checks.

	* unix/tcl.m4 (Darwin): s/CFLAGS/CPPFLAGS/ in macosx-version-min check.
	* unix/configure: autoconf-2.13

2007-03-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCompCmds.c (TclCompileForeachCmd): Prevent an unexpected
	* tests/foreach.test (foreach-9.1):		infinite loop when the
	variable list is empty and the foreach is compiled. [Bug 1671138]

2007-02-22  Andreas Kupries  <andreask@activestate.com>

	* tests/pkg.test: Added tests for the case of an alpha package
	  satisfying a require for the regular package, demonstrating a
	  corner case specified in TIP#280. More notes in the comments to
	  the test.

2007-02-20  Don Porter  <dgp@users.sourceforge.net>

	* doc/tcltest.n:	Typo fix.  [Bug 1663539]

2007-02-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c (Tcl_FSEvalFile): safe incr of objPtr ref.
