@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixTime.c,v 1.15.2.4 2005/03/15 16:29:54 kennykb Exp $
+ * RCS: @(#) $Id$
  */
 
 #include "tclInt.h"
@@ -461,7 +461,7 @@ SetTZIfNecessary() {
 	} else {
 	    Tcl_Free( lastTZ );
 	}
-	lastTZ = Tcl_Alloc( strlen( newTZ ) + 1 );
+	lastTZ = ckalloc( strlen( newTZ ) + 1 );
 	strcpy( lastTZ, newTZ );
     }
     Tcl_MutexUnlock(&tmMutex);
@@ -488,5 +488,5 @@ SetTZIfNecessary() {
 static void
 CleanupMemory( ClientData ignored )
 {
-    Tcl_Free( lastTZ );
+    ckfree( lastTZ );
 }
